--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,6 @@
     <string name="created_at">11/12/2022</string>
     <string name="upvotes">17.5K</string>
     <string name="reply_to">Replying to @Azerty klockenburg</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
