--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,9 @@
 
     <string name="activities_title">Activities</string>
     <string name="activities_activity_like">Liked your video</string>
+
+    <string name="followers_title">New Followers</string>
+    <string name="followers_activity_follow">Started following you</string>
+    <string name="followers_follow">Follow</string>
+    <string name="followers_unfollow">Unfollow</string>
 </resources>
