--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,8 +14,10 @@
     <string name="reply_to">Replying to @Azerty klockenburg</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    
+
     <string name="post_btn">Post</string>
     <string name="title_of_video">Title Video</string>
     <string name="desc_of_video">Description... Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc tincidunt, diam sit amet convallis finibus, augue </string>
+    <string name="following">Following</string>
+    <string name="followers">Followers</string>
 </resources>
