--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,5 @@
     <string name="followers_unfollow">Unfollow</string>
     <string name="following">Following</string>
     <string name="followers">Followers</string>
+    <string name="edit_profile">Edit Profile</string>
 </resources>
