--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,12 +7,11 @@
     <string name="don_t_have_an_account">Don\'t have an account?</string>
     <string name="sign_up">Sign up</string>
     <string name="already_have_an_account">Already have an account?</string>
-    <string name="username">Azerty klockenburg</string>
+    <string name="username">Username</string>
     <string name="lorem">Etiam vitae lacus vel tellus eleifend egestas. Mauris sed justo facilisis, hendrerit felis at, accumsan lorem. Nulla eleifend euismod interdum. Maecenas eu scelerisque nisi. Vivamus nec dolor a purus viverra faucibus sed ac ante. Praesent et nisi aliquet, ultricies ex ut, commodo urna. Mauris et lacus malesuada, dictum felis ac, mattis lorem.</string>
     <string name="created_at">11/12/2022</string>
     <string name="upvotes">17.5K</string>
     <string name="reply_to">Replying to @Azerty klockenburg</string>
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
 
@@ -31,4 +30,5 @@
     <string name="following">Following</string>
     <string name="followers">Followers</string>
     <string name="edit_profile">Edit Profile</string>
+    <string name="bio">Bio</string>
 </resources>
