--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
     <string name="post_btn">Post</string>
+    <string name="choose_btn">Choose</string>
     <string name="title_of_video">Title Video</string>
     <string name="desc_of_video">Description... Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc tincidunt, diam sit amet convallis finibus, augue </string>
     <string name="following">Following</string>
