--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,6 @@
 
     <string name="post_btn">Post</string>
     <string name="choose_btn">Choose</string>
-    <string name="title_of_video">Title Video</string>
     <string name="desc_of_video">Description... Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc tincidunt, diam sit amet convallis finibus, augue </string>
 
     <string name="activities_title">Activities</string>
@@ -50,4 +49,5 @@
     <string name="replying_to">Replying to </string>
     <string name="view_all_replies">View all replies</string>
     <string name="reply">Reply</string>
+    <string name="input_video_caption">Input video caption</string>
 </resources>
