--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,20 +13,15 @@
     <string name="upvotes">17.5K</string>
     <string name="reply_to">Replying to @Azerty klockenburg</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
-
-
     <string name="post_btn">Post</string>
     <string name="choose_btn">Choose</string>
     <string name="desc_of_video">Description… Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc tincidunt, diam sit amet convallis finibus, augue </string>
-
     <string name="activities_title">Activities</string>
     <string name="activities_activity_like">Liked your video</string>
     <string name="activities_reply">Replied on your comment: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc tincidunt, diam sit amet convallis finibus, augue</string>
-
     <string name="followers_title">New Followers</string>
     <string name="followers_activity_follow">Started following you</string>
     <string name="followers_follow">Follow</string>
-    <string name="followers_unfollow">Unfollow</string>
     <string name="following">Following</string>
     <string name="followers">Followers</string>
     <string name="edit_profile">Edit Profile</string>
@@ -51,7 +46,6 @@
     <string name="input_video_caption">Input video caption</string>
     <string name="replying_to">Replying to</string>
     <string name="comment_as">Comment as</string>
-
     <string name="edit">Edit</string>
     <string name="delete">Delete</string>
     <string name="edit_comment">Edit Comment</string>
@@ -59,7 +53,7 @@
     <string name="post">Post</string>
     <string name="forgot_password">Forgot Password?</string>
     <string name="or">Or</string>
-    <string name="continue_with_google">Continue with google</string>
+    <string name="continue_with_google">Continue with Google</string>
     <string name="renaldi_addison">Renaldi Addison</string>
     <string name="renajaaaa">renajaaaa</string>
     <string name="_173">173</string>
@@ -71,14 +65,13 @@
     <string name="title">Title</string>
     <string name="this_is_notification_text">This is notification text</string>
     <string name="_2022_12_03">2022–12–03</string>
-
     <string name="followingYou">started following you</string>
     <string name="likeVid">liked your video</string>
     <string name="upvoteThread">upvote your thread</string>
     <string name="likeComment">liked your comment</string>
     <string name="likeReply">liked your reply</string>
     <string name="replyComment">replied to your comment</string>
-    <string name="commentThread">commented to your thread</string>
+    <string name="commentThread">commented on your thread</string>
     <string name="no_recent_notification">No recent notification 😥</string>
     <string name="notifications">Notifications</string>
 </resources>
