--- a/app/src/main/res/values-in-rID/strings.xml
+++ b/app/src/main/res/values-in-rID/strings.xml
@@ -75,4 +75,51 @@
     <string name="commentThread">berkomentar ke thread anda</string>
     <string name="no_recent_notification">Tidak ada notifikasi terbaru 😥</string>
     <string name="notifications">Notifikasi</string>
+
+    <string name="please_input_title">Masukkan judul!</string>
+    <string name="please_choose_video">Pilih sebuah video!</string>
+    <string name="start_uploading">Mulai mengunggah</string>
+    <string name="post_created">"Post dibuat!"</string>
+    <string name="post_failed">Gagal membuat post!</string>
+    <string name="log_out_success">Berhasil Log Out</string>
+    <string name="profile_picture_updated">Gambar Profil Diperbarui</string>
+    <string name="delete_comment">Hapus komentar</string>
+    <string name="are_your_sure_delete_comment">Apakah Anda yakin ingin menghapus komentar ini?</string>
+    <string name="yes">Ya</string>
+    <string name="no">Tidak</string>
+    <string name="comment_deleted">Komentar dihapus!</string>
+    <string name="comment_failed_deleted">Gagal menghapus komentar!</string>
+    <string name="password_update_success">Sandi berhasil diperbarui!</string>
+    <string name="password_update_failed">Gagal memperbarui sandi!</string>
+    <string name="password_cannot_same">Sandi tidak boleh sama dengan sandi terakhir!</string>
+    <string name="comment_posted">Komentar dikirim!</string>
+    <string name="comment_post_failed">Gagal memposting komentar!</string>
+    <string name="thread_posted">Thread dikirim!</string>
+    <string name="thread_post_failed">Gagal memposting thread!</string>
+    <string name="fields_cannot_empty">Field tidak boleh kosong!</string>
+    <string name="comment_updated">Komentar diperbarui!</string>
+    <string name="comment_update_failed">Gagal memperbarui komentar!</string>
+    <string name="username_taken">Username sudah diambil!</string>
+    <string name="profile_updated">Profil diperbarui!</string>
+    <string name="thread_updated">Thread diperbarui!</string>
+    <string name="thread_deleted">Thread dihapus!</string>
+    <string name="email_not_exists">Email tidak ada!</string>
+    <string name="only_logged_with_google">Anda hanya masuk dengan google sign in, tidak bisa mengubah sandi!</string>
+    <string name="error_check_email">Terjadi kesalahan saat memeriksa email</string>
+    <string name="input_valid_email">Mohon masukkan email yang valid!</string>
+    <string name="error_occured">Terjadi kesalahan!</string>
+    <string name="credentials_false">Kredensial tidak ditemukan!</string>
+    <string name="account_registere_success">Akun berhasil terdaftar!</string>
+    <string name="comment_added">Komentar ditambahkan!</string>
+    <string name="comment_add_failed">Gagal mengomentari!</string>
+    <string name="reply_added">Balasan ditambahkan!</string>
+    <string name="reply_add_failed">Gagal membalas!</string>
+    <string name="password_not_match">Sandi tidak cocok!</string>
+    <string name="code_cannot_empty">Kode tidak boleh kosong!</string>
+    <string name="enter_a_valid_code">Mohon masukkan kode yang valid!</string>
+    <string name="home">Beranda</string>
+    <string name="thread">Thread</string>
+    <string name="add">Tambah</string>
+    <string name="notification">Notifikasi</string>
+    <string name="profile">Profil</string>
 </resources>
