--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -74,4 +74,52 @@
     <string name="commentThread">commented on your thread</string>
     <string name="no_recent_notification">No recent notification 😥</string>
     <string name="notifications">Notifications</string>
+
+    <string name="please_input_title">Please input title</string>
+    <string name="please_choose_video">Please choose a video</string>
+    <string name="start_uploading">Start uploading</string>
+    <string name="post_created">"Post created!"</string>
+    <string name="post_failed">Failed to create post!</string>
+    <string name="log_out_success">Successfully Log Out</string>
+    <string name="profile_picture_updated">Profile Picture Updated</string>
+    <string name="delete_comment">Delete comment</string>
+    <string name="are_your_sure_delete_comment">Are you sure you want to delete this comment?</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
+    <string name="comment_deleted">Comment deleted!</string>
+    <string name="comment_failed_deleted">Failed to delete comment!</string>
+    <string name="password_update_success">Password updated successfully!</string>
+    <string name="password_update_failed">Failed to update password!</string>
+    <string name="password_cannot_same">Password cannot be the same as the last password!</string>
+    <string name="comment_posted">Comment posted!</string>
+    <string name="comment_post_failed">Failed to post comment!</string>
+    <string name="thread_posted">Thread posted!</string>
+    <string name="thread_post_failed">Failed to post thread!</string>
+    <string name="fields_cannot_empty">Fields cannot be empty!</string>
+    <string name="comment_updated">Comment updated!</string>
+    <string name="comment_update_failed">Failed to update comment!</string>
+    <string name="username_taken">Username taken!</string>
+    <string name="profile_updated">Profile updated!</string>
+    <string name="thread_updated">Thread updated!</string>
+    <string name="thread_deleted">Thread deleted!</string>
+    <string name="email_not_exists">Email doesn\'t exists!</string>
+    <string name="only_logged_with_google">You only logged in with google sign in, cannot change password!</string>
+    <string name="error_check_email">Error occurred when checking the email</string>
+    <string name="input_valid_email">Please input valid email!</string>
+    <string name="error_occured">Error occurred!</string>
+    <string name="credentials_false">Credentials not found!</string>
+    <string name="account_registere_success">Account registered successfully!</string>
+    <string name="comment_added">Comment added!</string>
+    <string name="comment_add_failed">Failed to comment!</string>
+    <string name="reply_added">Reply added!</string>
+    <string name="reply_add_failed">Failed to reply!</string>
+    <string name="password_not_match">Password doesn\'t match!</string>
+    <string name="code_cannot_empty">Code cannot be empty!</string>
+    <string name="enter_a_valid_code">Please enter a valid code!</string>
+
+    <string name="home">Home</string>
+    <string name="thread">Thread</string>
+    <string name="add">Add</string>
+    <string name="notification">Notification</string>
+    <string name="profile">Profile</string>
 </resources>
