--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -117,6 +117,8 @@
     <string name="code_cannot_empty">Code cannot be empty!</string>
     <string name="enter_a_valid_code">Please enter a valid code!</string>
 
+    <string name="beep_talk_forgot_password">BeepTalk Forgot Password</string>
+    <string name="forgot_password_otp">This is your BeepTalk forgot password OTP: %1$s</string>
     <string name="home">Home</string>
     <string name="thread">Thread</string>
     <string name="add">Add</string>
